# DOCUMENTARY

./: .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  AI_PROMPT_TEMPLATES.md  AI_USAGE_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  EXHIBITS_commit_pinned.md  GEMINI.md  LICENSE  QUICK_REFERENCE.md  README.md  integrity_manifest.sha256
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
All_Case_Parties_EML/: 20250207-Welcome to Areal Property – Your New Property Mana-111.eml  20250225-Receipt of payment for 1803_243 Franklin St, Melbo-110.eml  20250325-Areal monthly after-hours trades list update-109.eml  20250325-Receipt of payment for 1803_243 Franklin St, Melbo-108.eml  20250401-Areal monthly after-hours trades list update-107.eml  20250409-Re_Non-Urgent Maintenance Request (1803_243 Frankl-106.eml  20250416-Re_Urgent_ Water Damage on Bedroom Wall (Unit 1803-101.eml  20250416-Re_Urgent_ Water Damage on Bedroom Wall (Unit 1803-102.eml  20250420-Automatic reply_ Urgent_ Water Damage on Bedroom W-99.eml  20250423-Receipt of payment for 1803_243 Franklin St, Melbo-98.eml  20250424-Re_FW_ Second Follow-up_ Urgent Water Damage Escal-95.eml  20250424-Routine inspection scheduled for 1803_243 Franklin-96.eml  20250428-Update on Leak Inspection-1803_243 Franklin-94.eml  20250428-Update on Leak Issue at 1803_ 243 Franklin-93.eml  20250430-Routine inspection for 1803_243 Franklin St, Melbo-92.eml  (+101 more)
All_Case_Parties_HTML+ATTACH/: index.html
tools/verify/: README.md  pyproject.toml
tools/verify/src/verify/: __init__.py  cli.py
tools/verify/tests/: test_basic.py
(+145 files in other folders)
