[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "documentary-verify"
version = "0.1.0"
description = "SHA256 manifest generator and checker for DOCUMENTARY"
requires-python = ">=3.9"
readme = "README.md"
authors = [{ name = "DOCUMENTARY Maintainers" }]
license = { text = "MIT" }

[project.scripts]
verify = "verify.cli:app_main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

